<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetLeft="8dp"
        android:contentInsetStart="8dp"
        app:contentInsetLeft="8dp"
        app:contentInsetStart="8dp"
        android:minHeight="70dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <com.mapquest.navigation.sampleapp.searchahead.SearchBarView
        android:id="@+id/fake_search_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_bar_height"
        app:placeHolder="true"
        />

    </RelativeLayout>
    </android.support.v7.widget.Toolbar>



    <ListView
        android:id="@+id/listviewRecentSearch"
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="match_parent"
        android:dividerHeight="0dp"
        android:visibility="visible" />


</android.support.constraint.ConstraintLayout>