...
            android:src="@drawable/ic_search_black_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/text_entry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
...
