<resources>
    <string name="app_name">MapQuest Weather</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="list_view_title">List</string>
    <string name="map_view_title">Map</string>

    <string name="no_location">No Location</string>
...
