...
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="-3dp"
                        android:layout_weight="1.5"/>
                    <TextView
                        android:ellipsize="marquee"
                        android:id="@+id/origin"
                        android:cursorVisible="true"
                        android:fontFamily="sans-serif-thin"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        android:layout_marginTop="1dp"
                        android:hint="Start"
...
